--- a/README
+++ b/README
@@ -1,25 +1,25 @@
 FONCTION AUTORISEES:
 
-	char	*readline (const char *prompt);
-	rl_clear_history
+V	char	*readline (const char *prompt);
+V	rl_clear_history
 	rl_on_new_line
 	rl_replace_line
 	rl_redisplay
-	add_history
+V	add_history
 
-	printf
-	malloc
-	free
+V	printf
+V	malloc
+V	free
 	write
-	int		access(const char *pathname, int mode);
+V	int		access(const char *pathname, int mode);
 
-	int		open(const char *pathname, int flags, mode_t mode);
-	ssize_t	read(int fd, void *buf, size_t count);
-	int		close(int fd);
+V	int		open(const char *pathname, int flags, mode_t mode);
+V	ssize_t	read(int fd, void *buf, size_t count);
+V	int		close(int fd);
 
-    pid_t	fork(void);
+V   pid_t	fork(void);
 	pid_t	wait(int *wstatus);
-	pid_t	waitpid(pid_t pid, int *wstatus, int options);
+V	pid_t	waitpid(pid_t pid, int *wstatus, int options);
 	pid_t 	wait3(int *wstatus, int options, struct rusage *rusage);
 	pid_t	wait4(pid_t pid, int *wstatus, int options, struct rusage *rusage);
 
@@ -28,7 +28,7 @@ FONCTION AUTORISEES:
 	int		sigaddset(sigset_t *set, int signum);
 	int		kill(pid_t pid, int sig);
 
-	void	exit(int status);
+V	void	exit(int status);
 
 	char	*getcwd(char *buf, size_t size);
 	int		chdir(const char *path);
@@ -38,23 +38,17 @@ FONCTION AUTORISEES:
 	int		lstat(const char *pathname, struct stat *statbuf);
 
 	int		unlink(const char *pathname);
-	int		execve(const char *pathname, char *const argv[], char *const envp[]);
+V	int		execve(const char *pathname, char *const argv[], char *const envp[]);
 	int		dup(int oldfd);
-	int		dup2(int oldfd, int newfd);
-	int		pipe(int pipefd[2]);
+V	int		dup2(int oldfd, int newfd);
+V	int		pipe(int pipefd[2]);
 
 	DIR				*opendir(const char *name);
 	struct dirent 	*readdir(DIR *dirp);
 	int				closedir(DIR *dirp);
 
-    char	*strerror(int errnum);
+V   char	*strerror(int errnum);
 	void	perror(const char *s);
-	{
-		#include <errno.h>
-       const char * const sys_errlist[];
-       int sys_nerr;
-       int errno;       /* Not really declared this way; see errno(3) */
-	}
 
 	int		isatty(int fd);
 	char	*ttyname(int fd);
@@ -66,5 +60,9 @@ FONCTION AUTORISEES:
 
 	int		tcgetattr(int fd, struct termios *termios_p);
 	int		tcsetattr(int fd, int optional_actions, const struct termios *termios_p);
-
-	tgetent, tgetflag, tgetnum, tgetstr, tgoto, tputs
+			tgetent;
+			tgetflag;
+			tgetnum;
+			tgetstr;
+			tgoto;
+			tputs;
