[UPDATE] further implementation needed for the expansion

--- a/README
+++ b/README
@@ -26,7 +26,7 @@ V	pid_t	waitpid(pid_t pid, int *wstatus, int options);
 	int		sigaction(int signum, const struct sigaction *act, struct sigaction *oldact);	
 	int		sigemptyset(sigset_t *set);
 	int		sigaddset(sigset_t *set, int signum);
-	int		kill(pid_t pid, int sig);
+V	int		kill(pid_t pid, int sig);
 
 V	void	exit(int status);
 
